--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-paginate": "^6.3.0",
+    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-select": "^2.4.0",
     "redux": "^4.0.1"
   },
   "scripts": {
